refactored error controller struct; added correct e2e test for getUserBanner;
