# docs/swagger.yaml
@@ -162,15 +162,15 @@ paths:
         "401":
           description: Пользователь не авторизован
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "403":
           description: Пользователь не имеет доступа
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
       security:
       - Bearer: []
       summary: Получение всех баннеров c фильтрацией по фиче и/или тегу
@@ -207,11 +207,11 @@ paths:
         "401":
           description: Unauthorized access
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "403":
           description: Forbidden access
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "500":
           description: Internal server error
           schema:
@@ -248,15 +248,15 @@ paths:
         "401":
           description: Пользователь не авторизован
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "403":
           description: Пользователь не имеет доступа
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "404":
           description: Баннер для тэга не найден
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
@@ -303,15 +303,15 @@ paths:
         "401":
           description: Пользователь не авторизован
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "403":
           description: Пользователь не имеет доступа
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "404":
           description: Баннер не найден
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
@@ -376,7 +376,7 @@ paths:
         "201":
           description: Фича успешно создана
           schema:
-            type: string
+            type: integer
         "401":
           description: Пользователь не авторизован
           schema:
@@ -490,7 +490,7 @@ paths:
         "201":
           description: Тэг успешно создан
           schema:
-            type: string
+            type: integer
         "401":
           description: Пользователь не авторизован
           schema:
@@ -591,15 +591,15 @@ paths:
         "401":
           description: Unauthorized access
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "403":
           description: Forbidden access
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "404":
           description: Banner not found
           schema:
-            type: string
+            $ref: '#/definitions/httpv1.errorResponse'
         "500":
           description: Internal server error
           schema:
